# Apollo

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Source/private/: AbstractSyntaxTree.cpp  Interpreter.cpp  Parser.cpp  Utils.cpp  apollo.cpp
Source/public/: AbstractSyntaxTree.hpp  Builtin.hpp  Interpreter.hpp  Parser.hpp  Utils.hpp  apollo.hpp
